--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Test
 
 on:
   workflow_dispatch:
@@ -12,10 +12,10 @@ jobs:
         
       - name: clone检验仓库
         run: |
-          git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/GT-ZhangAcer/CertificateInspectionBackend
+          git clone https://x-access-token:${{ secrets.GTCI }}@github.com/GT-ZhangAcer/CertificateInspectionBackend
           
       - name: 验证持有人信息
         run: | 
           cd CertificateInspectionBackend
-          python query.py -i ${{ github.event.issue.number }}
+          python query.py -i 5
       
